Added writeup, html and more images

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -93,6 +93,7 @@
      "output_type": "stream",
      "text": [
       "Number of training examples = 34799\n",
+      "Number of validation examples = 4410\n",
       "Number of testing examples = 12630\n",
       "Image data shape = (32, 32, 3)\n",
       "Number of classes = 43\n"
@@ -122,6 +123,7 @@
     "n_classes = signnames_df.shape[0]\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
+    "print(\"Number of validation examples =\", n_validation)\n",
     "print(\"Number of testing examples =\", n_test)\n",
     "print(\"Image data shape =\", image_shape)\n",
     "print(\"Number of classes =\", n_classes)"
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +385,7 @@
     "    mu = 0\n",
     "    sigma = 0.1\n",
     "    \n",
-    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32xNUM_CHANNELS. Output = 28x28x6.\n",
+    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32xNUM_CHANNELS. Output = 28x28xconv1_W_out_c.\n",
     "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, NUM_CHANNELS, conv1_W_out_c), mean = mu, stddev = sigma))\n",
     "    conv1_b = tf.Variable(tf.zeros(conv1_W_out_c))\n",
     "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
@@ -391,10 +393,10 @@
     "    # SOLUTION: Activation.\n",
     "    conv1 = tf.nn.relu(conv1)\n",
     "\n",
-    "    # SOLUTION: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    # SOLUTION: Pooling. Input = 28x28xconv1_W_out_c. Output = 14x14xconv1_W_out_c.\n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10xconv2_W_out_c.\n",
     "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, conv1_W_out_c, conv2_W_out_c), mean = mu, stddev = sigma))\n",
     "    conv2_b = tf.Variable(tf.zeros(conv2_W_out_c))\n",
     "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
@@ -402,13 +404,13 @@
     "    # SOLUTION: Activation.\n",
     "    conv2 = tf.nn.relu(conv2)\n",
     "\n",
-    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    # SOLUTION: Pooling. Input = 10x10xconv2_W_out_c. Output = 5x5xconv2_W_out_c.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    # SOLUTION: Flatten. Input = 5x5xconv2_W_out_c. Output = 5*5*conv2_W_out_c.\n",
     "    fc0   = flatten(conv2)\n",
     "    \n",
-    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    # SOLUTION: Layer 3: Fully Connected. Input = 5*5*conv2_W_out_c. Output = fc2_W_out.\n",
     "    fc1_W = tf.Variable(tf.truncated_normal(shape=(fc1_W_in, fc1_W_out), mean = mu, stddev = sigma))\n",
     "    fc1_b = tf.Variable(tf.zeros(fc1_W_out))\n",
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
@@ -417,7 +419,7 @@
     "    fc1    = tf.nn.relu(fc1)\n",
     "    fc1    = tf.nn.dropout(fc1, keep_prob)\n",
     "\n",
-    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    # SOLUTION: Layer 4: Fully Connected. Input = fc1_W_out. Output = fc2_W_out.\n",
     "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(fc1_W_out, fc2_W_out), mean = mu, stddev = sigma))\n",
     "    fc2_b  = tf.Variable(tf.zeros(fc2_W_out))\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
@@ -426,7 +428,7 @@
     "    fc2    = tf.nn.relu(fc2)\n",
     "    fc2    = tf.nn.dropout(fc2, keep_prob)\n",
     "\n",
-    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 43.\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = fc2_W_out. Output = 43.\n",
     "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(fc2_W_out, n_classes), mean = mu, stddev = sigma))\n",
     "    fc3_b  = tf.Variable(tf.zeros(n_classes))\n",
     "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
@@ -665,6 +667,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./lenet\n",
+      "Training Accuracy = 0.999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the model\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    saver = tf.train.import_meta_graph('./lenet.meta')\n",
+    "    saver.restore(sess, \"./lenet\")\n",
+    "    training_accuracy = evaluate(X_train, y_train)\n",
+    "    print(\"Training Accuracy = {:.3f}\".format(training_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -681,8 +708,6 @@
     }
    ],
    "source": [
-    "# Test the model\n",
-    "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    saver = tf.train.import_meta_graph('./lenet.meta')\n",
@@ -714,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
